hotfix: fix loader__pic z-index

--- a/pages/index.css
+++ b/pages/index.css
@@ -110,7 +110,7 @@
   height: 75px;
   width: 75px;
   background: #f7941e;
-  z-index: 2;
+  z-index: 3;
 }
 .loader__text {
   font-size: 32px;
